# Quarterly-results

./: .env.example  .gitignore  README.md  env-variables.txt  pyproject.toml
data/processed/: amazon_q3_2025.md  circle_q3_2025.md  coinbase_q3_2025.md  constellation_software_q3_2025.json  constellation_software_q3_2025.md  ebay_q3_2025.json  ebay_q3_2025.md  etsy_q3_2025.json  etsy_q3_2025.md  figs_q3_2025.md  lvmh_q3_2025.json  lvmh_q3_2025.md  nvidia_q3_2025.json  nvidia_q3_2025.md  shopify_q3_2025.json  shopify_q3_2025.md  wayfair_q3_2025.md  yeti_q3_2025.json  yeti_q3_2025.md
prompts/: financial_extraction.md  normalization.md  report_formatting.md  strategic_extraction.md  validation.md
scripts/: 00_download_from_drive.py  01_convert_pdfs.py  05_upload_to_drive.py  convert_all_pdfs.py  extract_insights.py  json_to_markdown.py  run_pipeline.py  upload_insights_to_drive.py
scripts/archive/: extract_by_company.py
src/: config.py
src/agents/: extractor.py  financial_extractor.py  pdf_to_markdown.py  pipeline.py  report_generator.py  reviewer.py  strategic_extractor.py
src/cli/: commands.py
src/database/: crud.py  models.py
src/extractors/: base.py  factory.py  image.py  markdown.py  pdf.py
src/gdrive/: auth.py  sync.py
src/models/: financials.py
src/parsers/: metric_patterns.py  normalizer.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: DashboardClient.tsx  layout.tsx  page.tsx
web/components/: CompanyCard.tsx  FilterBar.tsx  RevenueChart.tsx
web/lib/: cache.ts  data.ts  google-drive.ts  utils.ts
(+109 files in other folders)
